# deos-mcpd

./: .gitignore  Cargo.toml  LICENSE  README.md
dashboard/: index.html
examples/: claude_desktop_config.json  policy.yaml
src/: approval.rs  control.rs  jsonrpc.rs  main.rs  policy.rs  proxy.rs  receipts.rs
