[package]
name = "deos-mcpd"
version = "0.3.1"
edition = "2021"
description = "Governance proxy for Model Context Protocol (MCP) servers — permits, receipts, audit trail."
license = "MIT"
repository = "https://github.com/DEOS-Computing/deos-mcpd"
readme = "README.md"

[[bin]]
name = "deos-mcpd"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "io-std", "process", "sync", "fs", "time", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
blake3 = "1"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5"
regex = "1"
axum = "0.7"
tower = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
